[tool.poetry]
name = "cc-lab"
version = "0.1.3"
description = "Experiments with Conventional Commits and automated releases"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.25.0"

[tool.commitizen]
version_provider = "poetry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
